<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="tweetDetailViewModel"
            type="com.deonna.twitterclient.viewmodels.TweetDetailViewModel"
            />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:background="@drawable/rounded_corners"
        >

        <RelativeLayout
            android:id="@+id/rlMedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/ivMedia"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:visibility="@{tweetDetailViewModel.getMediaVisibility()}"
                tools:src="@drawable/ic_launcher"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlUserInfo"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlMedia"
            android:layout_marginTop="6dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="6dp"
            android:padding="10dp"
            >

            <ImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="4dp"
                android:scaleType="fitCenter"
                tools:src="@drawable/ic_launcher"
                />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_toEndOf="@id/ivProfileImage"
                android:text="@{tweetDetailViewModel.getName()}"
                android:textStyle="bold"
                android:textSize="14sp"
                tools:text="@string/james_altucher"
                tools:textStyle="bold"
                />

            <ImageView
                android:id="@+id/ivIsVerfied"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_toEndOf="@id/tvName"
                android:paddingTop="2dp"
                android:visibility="@{tweetDetailViewModel.getIsVerifiedVisibility()}"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_verified"
                />

            <TextView
                android:id="@+id/tvScreenName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{tweetDetailViewModel.getScreenName()}"
                android:textSize="10sp"
                tools:text="@string/jaltucher"
                android:layout_below="@+id/tvName"
                android:layout_toEndOf="@+id/ivProfileImage"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlTweet"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlUserInfo"
            android:layout_alignStart="@+id/rlUserInfo"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            >

            <com.deonna.twitterclient.utilities.components.LinkifiedTextView
                android:id="@+id/tvTweet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:lineSpacingMultiplier="1.2"
                android:autoLink="all"
                android:linksClickable="true"
                android:text="@{tweetDetailViewModel.getTweetText()}"
                android:textSize="12sp"
                tools:text="@string/test_tweet"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlTimeStamp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_alignStart="@+id/rlTweet"
            android:layout_below="@+id/rlTweet"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            >

            <TextView
                android:id="@+id/tvTimestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@{tweetDetailViewModel.getRelativeTimestamp()}"
                android:textSize="10sp"
                tools:text="@string/timestamp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlTweetStats"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlTimeStamp"
            android:layout_alignStart="@+id/rlTweet"
            android:layout_marginBottom="4dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            >


            <TextView
                android:id="@+id/tvNumRetweets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="3dp"
                android:text="@{tweetDetailViewModel.retweetCount}"
                android:textSize="10sp"
                android:textStyle="bold"
                tools:text="@string/num_followers"
                />

            <TextView
                android:id="@+id/tvRetweetsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tvNumRetweets"
                android:layout_marginEnd="12dp"
                android:text="@string/retweets"
                android:textAllCaps="true"
                android:textSize="10sp"
                />


            <TextView
                android:id="@+id/tvNumFavorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tvRetweetsLabel"
                android:layout_centerVertical="true"
                android:layout_marginEnd="3dp"
                android:text="@{tweetDetailViewModel.favoriteCount}"
                android:textSize="10sp"
                android:textStyle="bold"
                tools:text="@string/num_followers"
                />

            <TextView
                android:id="@+id/tvFavoritesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tvNumFavorites"
                android:layout_marginEnd="12dp"
                android:text="@string/favorites"
                android:textAllCaps="true"
                android:textSize="10sp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlOptions"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlTweetStats"
            android:layout_alignStart="@+id/rlTweetStats"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            >

            <ImageView
                android:id="@+id/ivReplies"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_reply"
                />

            <ImageView
                android:id="@+id/ivRetweets"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_toEndOf="@+id/ivReplies"
                android:layout_toRightOf="@+id/ivReplies"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:scaleType="fitCenter"
                android:src="@{tweetDetailViewModel.getRetweetIcon()}"
                tools:src="@drawable/ic_retweet_selected"
                />

            <ImageView
                android:id="@+id/ivFavorites"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_toEndOf="@id/ivRetweets"
                android:layout_toRightOf="@id/ivRetweets"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:scaleType="fitCenter"
                android:src="@{tweetDetailViewModel.getFavoriteIcon()}"
                tools:src="@drawable/ic_favorite_selected"
                />

        </RelativeLayout>

    </RelativeLayout>

</layout>